# online-training

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
course/: models.py  pagination.py  permissions.py  seriliazers.py  service.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_lesson_course.py  0003_payments.py  0004_course_owner_lesson_owner.py  0005_course_price_lesson_price.py  0006_course_last_update.py  0007_alter_course_last_update.py  0008_alter_course_last_update.py  0009_alter_course_last_update.py  0010_remove_course_last_update.py  0011_course_last_update.py  0012_remove_course_last_update.py  0013_course_last_update.py  0014_alter_course_last_update.py  0015_alter_course_last_update.py  0016_alter_course_last_update.py  0017_alter_course_last_update.py  0018_alter_course_last_update.py  0019_alter_course_last_update.py  0020_remove_course_last_update.py
payments/: models.py  serializer.py  service.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_paymentscourse_options_and_more.py  0003_checkpayment.py  0004_alter_paymentscourse_payment_url.py  0005_remove_checkpayment_payment_course_and_more.py
subscribe/: apps.py  models.py  permission.py  serializers.py  tests.py  urls.py  views.py
subscribe/migrations/: 0001_initial.py
users/: models.py  permission.py  seriliazers.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_city_user_phone.py  (+1 more)
(+2 files in other folders)
